# kuvasta-mitat

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package.json  playwright.config.js  pyproject.toml  style.css  sw.js  vitest.config.js
.github/workflows/: ci.yml
public/: manifest.json
src/: app.js  canvas-ruler.js  detector.js  history.js  image-utils.js  measurer.js  results.js  upload.js  worker-detector.js
src/kuvasta_mitat/: __init__.py  annotator.py  detector.py  main.py  measurer.py
tests/: test_annotator.py  test_canvas_ruler.js  test_detector.py  test_history.js  test_main.py  test_measurer.js  test_measurer.py  test_worker_detector.js
tests/e2e/: upload.spec.js
